<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amit.leave1.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/pad_20dp"
        android:paddingLeft="@dimen/pad_15dp"
        android:paddingRight="@dimen/pad_15dp"
        android:paddingTop="@dimen/pad_20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:src="@drawable/bmsce"
            android:layout_marginBottom="@dimen/pad_20dp" />

        <AutoCompleteTextView
            android:id="@+id/uname"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:drawableStart="@mipmap/uname"
            android:drawableLeft="@mipmap/uname"
            android:hint="@string/username">

            <requestFocus />
        </AutoCompleteTextView>

        <EditText
            android:id="@+id/upswd"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginBottom="@dimen/pad_20dp"
            android:layout_marginTop="@dimen/pad_15dp"
            android:drawableStart="@mipmap/key"
            android:drawableLeft="@mipmap/key"
            android:hint="@string/password"
            android:inputType="textPassword"></EditText>

        <Button
            android:id="@+id/snin"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:background="@drawable/button5"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/log_in" />/>

        <Button
            android:id="@+id/snup"
            android:textColor="@android:color/black"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:background="@drawable/button4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="REGISTER" />/>
    </LinearLayout>
</ScrollView>