<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="20dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/leave"
            android:layout_weight="0.1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leave"
            android:textColor="#3b5998"
            android:textSize="@dimen/abc_text_size_large_material" />

        <Spinner
            android:layout_weight="0.1"
            android:id="@+id/leave_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Half Day"
                android:id="@+id/hday"
                android:textColor="@color/input_login"
                android:layout_weight="0.5" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Full Day"
                android:id="@+id/fday"
                android:textColor="@color/input_login"
                android:layout_weight="0.5" />
        </RadioGroup>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hllabel"
            android:textColor="#3b5998"
            android:textSize="@dimen/abc_text_size_large_material"
            android:layout_weight="0.1"
            android:text="Half Day Leave" />

        <TextView
            android:id="@+id/onlabel"
            android:layout_weight="0.1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="On"
            android:textColor="#3b5998"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/abc_text_size_large_material" />

        <EditText
            android:layout_weight="0.1"
            android:id="@+id/on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pre"
                android:id="@+id/pre"
                android:textColor="@color/input_login"
                android:layout_weight="0.5" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post"
                android:id="@+id/post"
                android:textColor="@color/input_login"
                android:layout_weight="0.5" />
        </RadioGroup>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fllabel"
            android:textColor="#3b5998"
            android:textSize="@dimen/abc_text_size_large_material"
            android:layout_weight="0.1"
            android:text="Full Day Leaves" />

        <TextView
            android:id="@+id/from"
            android:layout_weight="0.1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textColor="#3b5998"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/abc_text_size_large_material" />

        <EditText
            android:layout_weight="0.1"
            android:id="@+id/et1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />

        <TextView
            android:layout_weight="0.1"
            android:id="@+id/to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textColor="#3b5998"
            android:textSize="@dimen/abc_text_size_large_material"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_weight="0.1"
            android:id="@+id/et2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />

        <LinearLayout
            android:layout_weight="0.1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0.3"
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/number"
                android:textColor="#3b5998"
                android:textSize="@dimen/abc_text_size_large_material" />

            <EditText
                android:layout_weight="0.7"
                android:id="@+id/et3"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="0.1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0.3"
                android:id="@+id/falabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Financial Assistance"
                android:textColor="#3b5998"
                android:textSize="@dimen/abc_text_size_large_material" />

            <CheckBox
                android:layout_weight="0.7"
                android:id="@+id/fa"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:focusable="false" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_weight="0.1"
            android:id="@+id/amt"
            android:textColor="@android:color/black"
            android:textSize="@dimen/abc_text_size_large_material"
            android:layout_marginTop="10dp"
            android:hint="Enter Amount in Rs" />

        <TextView
            android:layout_weight="0.1"
            android:id="@+id/reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reason"
            android:textColor="#3b5998"
            android:textSize="18sp"
            android:layout_marginTop="20dp" />

        <Spinner
            android:layout_weight="0.1"
            android:id="@+id/Reason_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nreason"
            android:hint="Mention Reason"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:padding="@dimen/pad_10dp"
            android:gravity="top|left"
            android:lines="8" />

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/alt"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.1"
            android:text="Alternate Faculty: "
            android:textColor="#3b5998"
            android:textSize="@dimen/abc_text_size_large_material" />

        <EditText
            android:id="@+id/et4"
            android:layout_weight="0.1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Faculty name"
            android:gravity="center"
            android:focusable="true" />

        <LinearLayout
            android:layout_weight="0.1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel"
                android:layout_weight="0.5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:drawableLeft="@mipmap/reject"
                android:textSize="15sp"
                android:padding="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button4"
                android:textColor="@android:color/white"
                android:onClick="cancel" />

            <Button
                android:padding="5dp"
                android:layout_weight="0.5"
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/submit"
                android:drawableLeft="@mipmap/accept"
                android:textSize="15sp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/button5"
                android:textColor="@android:color/white"
                android:onClick="submit" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>

